--- a/Ass1.html
+++ b/Ass1.html
@@ -29,7 +29,7 @@
 	<p class="okBoomer"> The web or more formally known the World Wide Web is a collection of web pages that can be accessed by your web browser. The Internet allows your computer to access web pages from the world wide web. <br></p><p class="okBoomer">
 		When you insert a URL into your web browser such as www.google.com your web browser directs your internet to connect to google's server and retrieves the web page from a web server. A web server is a type of powerful computer that is specifically suited for storing and sending web pages. These usually use dedicated operating systems that are different from typical computer softwares which allow this process to be quicker and more reliable. Furthermore, if too many requests are being sent to a webserver at once it could crash access to the web page or cause congestions and make the experience slow. This is why it is vital for companies to correctly judge traffic to their websites and set up their web servers accordingly. <br></p> 
   <div class="square">
-  <img src="server.jpg" class="pine">
+  <img src="Server.jpg" class="pine">
   <p class="cap">Image of web server</p>
   </div>
   		<p class="okBoomer">
