--- a/Ass1.html
+++ b/Ass1.html
@@ -32,6 +32,7 @@
   <img src="Server.jpg" class="pine">
   <p class="cap">Image of web server</p>
   </div>
+	 <div class="squareL">
   		<img src="Telestra.jpg" class="pineL">
   <p class="cap">Image outside of a Telstra (An ISP) building</p>
   </div>
