--- a/About.html
+++ b/About.html
@@ -40,8 +40,8 @@
   <ul style="list-style-type:disc">
     <li class="okBoomer"> I want to graduate high school complete my HSC's to a high degree of effort.<br></li>
     <li class="okBoomer"> After graduating school I want to get a career in the wide array of IT courses. I am particulalry intrested in network security and web design. <br></li>
-    <li class="okBoomer">I want to conitinue playing guitar casually for most of my life and to be able to play most songs.<br></li>
-    <li class="okBoomer"> As I continue to grow older I would like to maintain fit and continue swimming regularly.<br></li>
+    <li class="okBoomer">I want to conitinue playing guitar casually for most of my life and to be able to play most songs. I find playing an instrument is a good way to switch off from other aspects of my life.<br></li>
+    <li class="okBoomer">As I continue to grow older I would like to maintain fit and continue swimming regularly.</li>
   </ul>
 </div>
 <h1 class="P">My current Electives</h1>
