--- a/About.html
+++ b/About.html
@@ -35,6 +35,10 @@
 		<li class="okBoomer"> While I am not particularly great at sports I enjoy staying fit. Prior to the Corona virus outbreak I would swim three times a week and go to a taekwondo class twice a week. </li>
 		<li class="okBoomer"> I have been playing guitar for over a year. My favourite song I have learnt would probably be Stairway to heaven by Led Zepplin. Right now I am learning Autumn Leaves by Paul Desmond.<br></li>
 	</ul>
+	<div class="pad">
+		<iframe src="https://open.spotify.com/embed/track/5CQ30WqJwcep0pYcV4AMNc" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+		<iframe src="https://open.spotify.com/embed/track/3eMfftdPSD4PI1cux5w97b" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+	</div>
 <div class="noob">
 	<h1 class="P">Goals and Aspirations</h1>
   <ul style="list-style-type:disc">
