--- a/About.html
+++ b/About.html
@@ -30,10 +30,10 @@
 	</div>
 	<h1 class="P">My hobbies and Interests</h1>
 	<ul style="list-style-type:disc">
-		<li class="okBoomer">I have always been really intrested in computers from tinkering with settings to opening them up. When I was 10 I built my first desktop computer and it was a really fun and informative experience. <br></li>
-		<li class="okBoomer">I enjoy playing video games especially with my friends. My favourite games would have to be minecraft and roblox because I played them so much when I was younger but games like the just cause series and the uncharted series are pretty good.<br></li>
-		<li class="okBoomer"> While I am not particularly great at sports I enjoy staying fit. Prior to the Corona virus outbreak I would swim three times a week and go to a taekwondo class twice a week. </li>
-		<li class="okBoomer"> I have been playing guitar for over a year. My favourite song I have learnt would probably be Stairway to heaven by Led Zepplin. Right now I am learning Autumn Leaves by Paul Desmond.<br></li>
+		<li class="okBoomer">I have always been interested in computers from tinkering with settings to opening them up. When I was 10 I built my first desktop computer and it was a really fun and informative experience. <br></li>
+		<li class="okBoomer">I enjoy playing video games, especially with my friends. My favourite games would have to be Minecraft and Roblox because I played them so much when I was younger but games like the Just Cause series and the Uncharted series are pretty good.<br></li>
+		<li class="okBoomer"> While I am not particularly great at sports I enjoy staying fit. Prior to the Coronavirus outbreak, I would swim three times a week and go to a taekwondo class twice a week. </li>
+		<li class="okBoomer"> I have been playing the guitar for over a year. My favourite song I have learnt would probably be Stairway to Heaven by Led Zepplin. Right now I am learning Autumn Leaves by Paul Desmond.<br></li>
 	</ul>
 	<div class="pad">
 		<iframe src="https://open.spotify.com/embed/track/5CQ30WqJwcep0pYcV4AMNc" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
@@ -42,9 +42,9 @@
 <div class="noob">
 	<h1 class="P">Goals and Aspirations</h1>
   <ul style="list-style-type:disc">
-    <li class="okBoomer"> I want to graduate high school complete my HSC's to a high degree of effort.<br></li>
-    <li class="okBoomer"> After graduating school I want to get a career in the wide array of IT courses. I am particulalry intrested in network security and web design. <br></li>
-    <li class="okBoomer">I want to conitinue playing guitar casually for most of my life and to be able to play most songs. I find playing an instrument is a good way to switch off from other aspects of my life.<br></li>
+    <li class="okBoomer"> I want to graduate high school and complete my HSC's to a high degree of effort.<br></li>
+    <li class="okBoomer"> After graduating school I want to get a career in the wide array of IT courses. I am particularly interested in network security and web design. <br></li>
+    <li class="okBoomer">I want to continue playing the guitar casually for most of my life and to be able to play most songs. I find playing an instrument is a good way to switch off from other aspects of my life.<br></li>
     <li class="okBoomer">As I continue to grow older I would like to maintain fit and continue swimming regularly.</li>
   </ul>
 </div>
@@ -59,10 +59,10 @@
 </div>
 <div class="split">
 	<div Class="Elect"> 
-		<p1 class="write" style="text-align: center;">As my minor elective I chosce IST or Information Software Technology. In IST we do some theory which isn't super fun but I really find working on projects fun. This term our project was to work on coding a website in html. The experience was new to me and a challenging one but it also enriched me with a lot of new coding knowledge I didnthave prior. I really enjoyed coding funny websites such as the earthworm sally website and Yo Tengo search which allowed me to learn oding through my personal interests. Overall I am quite satisfied with my choice as IST as my minor elective. While there is a lot of theory to learn and it could be frustrating at times it also proves really rewarding.<p1>
+		<p1 class="write" style="text-align: center;">As my minor elective, I chose IST or Information Software Technology. In IST we do some theory which isn't super fun but I really find working on projects fun. This term our project was to work on coding a website in HTML. The experience was new to me and a challenging one but it also enriched me with a lot of new coding knowledge I didn't have prior. I extremely enjoyed coding funny websites such as the earthworm sally website and Yo Tengo search which allowed me to learn coding through my personal interests. Overall I am quite satisfied with my choice as IST as my minor elective. While there is a lot of theory to learn and it could be frustrating at times it also proves very rewarding.<p1>
 	</div> 
 	<div class="Elect"> 
-		<p2 class="write" style="text-align: center;">As my major elctive I chosce Music major. I have been playing guitar for over a year now. In music major we do quite a bit of theory which can get quite boring at times, however its really fun when we get to do practicals. It allows me to play with my friends and try new instruments. This term we were working on jazz for our assessment and it was quite intresting to learn about its origins and play a style of music I had put too much thought into previously. Furthermore as a class project we were reherasing the song 'where is the love' in a class ensemble. I was playing bass and it was quite intresting putting my guitar knowledge to the bass. While music can be challenging and boring at times it never fails at being a new experience and was a great choice as a major elective.<p1>
+		<p2 class="write" style="text-align: center;">As my major elective, I chose Music major. I have been playing the guitar for over a year now. In music major, we do quite a bit of theory which can get quite boring at times, however, it's fun when we get to do practicals. It allows me to play with my friends and try new instruments. This term we were working on jazz for our assessment and it was quite interesting to learn about its origins and play a style of music I had put too much thought into previously. Furthermore, as a class project we were rehearsing the song 'where is the love' in a class ensemble. I was playing bass and it was quite interesting putting my guitar knowledge onto the bass. While music can be challenging and boring at times it never fails at being a new experience and was a great choice as a major elective.<p1>
 	</div>
 </div>
 </body>
